# bitcoin-liquidation-pulse

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run_dashboard.py
.github/workflows/: ci.yml
docs/: iteration-roadmap.md
docs/superpowers/plans/: 2026-07-07-data-confidence.md
docs/superpowers/specs/: 2026-07-07-data-confidence-design.md
liquidation_pulse/: __init__.py  binance_ws.py  external_liquidations.py  history.py  liquidations.py  onchain.py  proxy.py  server.py
tests/: test_external_liquidations.py  test_history.py  test_liquidations.py  test_onchain.py  test_proxy.py  test_server.py
web/: app.js  index.html  styles.css
