[project]
name = "bitcoin-liquidation-pulse"
version = "0.1.0"
description = "A local BTC liquidation and Bitcoin on-chain intelligence dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "aiohttp",
  "ccxt",
  "matplotlib",
  "numpy",
  "pandas",
  "python-dotenv",
  "requests",
]

[tool.ruff]
line-length = 120
target-version = "py311"
